# Waterstone

./: .envrc  .gitignore  HS_Overlay  Makefile  README.md  TODO.txt  Waterstone.sln  app.manifest  package-lock.json  package.json  pyproject.toml
img/: Card-SVG.xcf  estrelas_douradas.gpl
src/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindow.cs  Program.cs  __main__.py  app.manifest  hit.html  hit.js  index.html  main.c  main.js  renderer.js  src.csproj
src/App/: CardsMenu.qml  main.qml  qmldir
src/Styles/: AppDefaultStyles.axaml
